# chemunited-drive

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: pre-commit.yml
.github/workflows/: codeql.yml  pre-commit.yml  publish.yml
src/ChemunitedDrive/: __init__.py  __main__.py  flowchem_thread.py  frames.py  gui.py  main.py  utils.py
src/ChemunitedDrive/core/: dev_diagnosis.py  device_card.py  indicator_button.py
src/ChemunitedDrive/logos/: resources_rc.py  resources_rc.qrc
